--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: Main  # Specify the environment
 
     steps:
     - uses: actions/checkout@v2
@@ -17,9 +18,16 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Build and push Docker image
+    - name: Build and push Docker image for client
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./client
         push: true
-        tags: your-dockerhub-username/your-image-name:latest
+        tags: your-dockerhub-username/client-image-name:latest
+
+    - name: Build and push Docker image for spotify_project
+      uses: docker/build-push-action@v2
+      with:
+        context: ./spotify_project
+        push: true
+        tags: your-dockerhub-username/spotify-project-image-name:latest
