--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,6 +7,11 @@ RUN npm setup
 COPY . ./
 RUN npm run build
 
+ENV REACT_APP_API_BASE_URL=http://api:8000
+
+RUN npm install -g serve
+CMD serve -s build -l 3000
+
 # FROM nginx:1.17.8-alpine
 # COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
 # EXPOSE 80
