--- a/spotify_project/Dockerfile
+++ b/spotify_project/Dockerfile
@@ -1,7 +1,10 @@
 # Dockerfile
 
 FROM python:3.8-slim-buster
-WORKDIR /app
+WORKDIR /app/spotify_project
+
+# Set PYTHONPATH
+ENV PYTHONPATH=/app/spotify_project
 
 # Install dependencies:
 COPY requirements.txt .
@@ -11,4 +14,4 @@ RUN pip install -r requirements.txt
 COPY . .
 
 # Run the application:
-CMD ["uvicorn", "controller:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api.controller:app", "--host", "0.0.0.0", "--port", "8000"]
