--- a/spotify_project/Dockerfile
+++ b/spotify_project/Dockerfile
@@ -1,17 +1,17 @@
 # Dockerfile
 
 FROM python:3.8-slim-buster
-WORKDIR /app/spotify_project
+WORKDIR /app
 
 # Set PYTHONPATH
-ENV PYTHONPATH=/app/spotify_project
+ENV PYTHONPATH=/app
 
 # Install dependencies:
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Copy python files:
-COPY . .
+COPY . spotify_project/
 
 # Run the application:
-CMD ["uvicorn", "api.controller:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "spotify_project.api.controller:app", "--host", "0.0.0.0", "--port", "8000"]
