--- a/spotify_project/Dockerfile
+++ b/spotify_project/Dockerfile
@@ -13,5 +13,8 @@ RUN pip install -r requirements.txt
 # Copy python files:
 COPY . spotify_project/
 
+ENV REDIRECT_URI=http://api:8000/callback
+ENV FRONTEND_URL=http://frontend:3000
+
 # Run the application:
 CMD ["uvicorn", "spotify_project.api.controller:app", "--host", "0.0.0.0", "--port", "8000"]
