Additional changes to fix containerization

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,10 +7,11 @@ RUN npm install
 COPY . ./
 RUN npm run build
 
-ENV REACT_APP_API_BASE_URL=http://api:8000
+COPY env.sh ./
+RUN chmod +x ./env.sh
 
 RUN npm install -g serve
-CMD serve -s build -l 3000
+CMD ["/bin/bash", "-c", "./env.sh && serve -s build -l 3000"]
 
 # FROM nginx:1.17.8-alpine
 # COPY --from=build-deps /usr/src/app/build /usr/share/nginx/html
