--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "setup": "npm install && cd client && npm install",
-    "start": "bash ./client/env.sh && concurrently \"npm --prefix client start\" \"uvicorn spotify_project.api.controller:app --reload\""
+    "start": "node ./client/set-env.js && concurrently \"npm --prefix client start\" \"uvicorn spotify_project.api.controller:app --reload\""
   },
   "keywords": [],
   "author": "",
