--- a/spotify_project/Dockerfile
+++ b/spotify_project/Dockerfile
@@ -3,6 +3,12 @@
 FROM python:3.8-slim-buster
 WORKDIR /app
 
+ARG CLIENT_ID
+ARG CLIENT_SECRET
+
+ENV CLIENT_ID=$CLIENT_ID
+ENV CLIENT_SECRET=$CLIENT_SECRET
+
 # Set PYTHONPATH
 ENV PYTHONPATH=/app
 
