--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,14 +18,14 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Build and push Docker image for client
+    - name: Build and push Docker image for spotifyproject-frontend
       uses: docker/build-push-action@v2
       with:
         context: ./client
         push: true
         tags: parmati/spotifyproject-frontend:latest
 
-    - name: Build and push Docker image for spotify_project
+    - name: Build and push Docker image for spotifyproject-api
       uses: docker/build-push-action@v2
       with:
         context: ./spotify_project
@@ -39,6 +39,6 @@ jobs:
         file: ./spotify_project/Dockerfile
         push: true
         tags: parmati/spotifyproject-api-private:latest
-        secrets: |
+        build-args: |
           CLIENT_ID=${{ secrets.CLIENT_ID }}
           CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}
